@@ -1512,7 +1512,7 @@ INCLUDE_FILE_PATTERNS  =
 # undefined via #undef or recursively expanded use the := operator
 # instead of the = operator.
 
-PREDEFINED             = INNOEXTRACT_HAVE_ARC4 INNOEXTRACT_HAVE_LZMA
+PREDEFINED             = INNOEXTRACT_HAVE_DECRYPTION INNOEXTRACT_HAVE_LZMA
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then
 # this tag can be used to specify a list of macro names that should be expanded.
